
    HDFS-4252. Improve confusing log message that prints exception when editlog 
    read is completed. (Jing Zhao via suresh)

  OPTIMIZATIONS

    HDFS-2533. Backport: Remove needless synchronization on some FSDataSet
    methods.  (Brandon Li via szetszwo)

    HADOOP-8971. PureJavaCrc32 cache hit-ratio is low for static data
    (Backport of HADOOP-8926) (Gopal V via suresh)

  BUG FIXES

    HADOOP-8460. Document proper setting of HADOOP_PID_DIR and
    HADOOP_SECURE_DN_PID_DIR (bobby)

    MAPREDUCE-4195. With invalid queueName request param, jobqueue_details.jsp 
    shows NPE (jira.shegalov via tucu)

    MAPREDUCE-3727. jobtoken location property in jobconf refers to wrong 
    jobtoken file (tucu)

    HADOOP-8512. AuthenticatedURL should reset the Token when the server 
    returns other than OK on authentication (tucu)

    HADOOP-7868. Hadoop native fails to compile when default linker
    option is -Wl,--as-needed. (Trevor Robinson via eli)

    MAPREDUCE-2289. Permissions race can make getStagingDir fail on local filesystem 
    (ahmed via tucu)

    HADOOP-8249. invalid hadoop-auth cookies should trigger authentication if info 
    is avail before returning HTTP 401 (tucu)

    HDFS-3595. Update the regular expression in TestEditLogLoading for the
    error message change by HDFS-3521.  (Colin Patrick McCabe via szetszwo)

    MAPREDUCE-4317. Job view ACL checks are too permissive (kkambatl via tucu)

    MAPREDUCE-4385. FairScheduler.maxTasksToAssign() should check for 
    fairscheduler.assignmultiple.maps < TaskTracker.availableSlots (kkambatl via tucu)

    MAPREDUCE-4359. Potential deadlock in Counters. (tomwhite)

    MAPREDUCE-3993. Graceful handling of codec errors during decompression 
    (kkambatl via tucu)

    HDFS-2827. Cannot save namespace after renaming a directory above
    a file with an open lease. (Uma Maheswara Rao G via eli)

    HDFS-3628. The dfsadmin -setBalancerBandwidth command on branch-1